--- a/AppIntroTercerCorte/app/src/main/res/layout/activity_main.xml
+++ b/AppIntroTercerCorte/app/src/main/res/layout/activity_main.xml
@@ -7,52 +7,6 @@
     android:onClick="sendMessage"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextTextPersonName8"
-        android:layout_width="69dp"
-        android:layout_height="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="270dp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Base"
-        tools:layout_editor_absoluteX="246dp"
-        tools:layout_editor_absoluteY="237dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Altura"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="270dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="69dp"
-        android:layout_height="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="231dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName5"
-        android:layout_width="69dp"
-        android:layout_height="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="231dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,20 +19,20 @@
         app:layout_constraintVertical_bias="0.039" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnrectangulo"
         android:layout_width="143dp"
         android:layout_height="37dp"
         android:text="Rectangulo"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="304dp" />
+        tools:layout_editor_absoluteY="267dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btncuadrado"
         android:layout_width="126dp"
         android:layout_height="39dp"
         android:text="Cuadrado"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="304dp" />
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="258dp" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -89,12 +43,12 @@
         tools:layout_editor_absoluteY="56dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btntriangulo"
         android:layout_width="127dp"
         android:layout_height="41dp"
         android:text="Triangulo"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="418dp" />
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="604dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -109,44 +63,24 @@
         android:layout_width="100dp"
         android:layout_height="58dp"
         app:srcCompat="@drawable/rectangulo"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="160dp" />
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="182dp" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="92dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/btncuadrado"
         app:srcCompat="@drawable/cuadrado"
-        tools:layout_editor_absoluteX="291dp" />
+        tools:layout_editor_absoluteX="281dp" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="70dp"
         android:layout_height="59dp"
         app:srcCompat="@drawable/trian"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="359dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="69dp"
-        android:layout_height="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="231dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName7"
-        android:layout_width="69dp"
-        android:layout_height="25dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="231dp" />
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="512dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
