--- a/AppIntroTercerCorte/app/src/main/res/layout/activity_main.xml
+++ b/AppIntroTercerCorte/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="sendMessage"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bienvenido al intro de apps con Android Studio"
 
+        android:text="Bienvenido al intro de apps con Android Studio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -22,65 +22,94 @@
         android:id="@+id/btnrectangulo"
         android:layout_width="143dp"
         android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="348dp"
+        android:onClick="buttonClicked"
         android:text="Rectangulo"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="267dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btncuadrado"
+        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btncuadrado"
         android:layout_width="126dp"
         android:layout_height="39dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="348dp"
+        android:onClick="buttonClicked"
         android:text="Cuadrado"
-        tools:layout_editor_absoluteX="248dp"
-        tools:layout_editor_absoluteY="258dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="37dp"
         android:layout_height="40dp"
-        app:srcCompat="@drawable/selecionar"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="56dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.118"
+        app:srcCompat="@drawable/selecionar" />
 
     <Button
         android:id="@+id/btntriangulo"
         android:layout_width="127dp"
         android:layout_height="41dp"
+        android:layout_marginBottom="148dp"
+        android:onClick="buttonClicked"
         android:text="Triangulo"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="604dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selecciona la figura con la que deseas trabajar"
-        tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.603"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="210dp" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="100dp"
         android:layout_height="58dp"
-        app:srcCompat="@drawable/rectangulo"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="182dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnrectangulo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.234"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.774"
+        app:srcCompat="@drawable/rectangulo" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="48dp"
         app:layout_constraintBottom_toTopOf="@+id/btncuadrado"
-        app:srcCompat="@drawable/cuadrado"
-        tools:layout_editor_absoluteX="281dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.748"
+        app:srcCompat="@drawable/cuadrado" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="70dp"
         android:layout_height="59dp"
-        app:srcCompat="@drawable/trian"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="512dp" />
+        android:layout_marginBottom="52dp"
+        app:layout_constraintBottom_toTopOf="@+id/btntriangulo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.574"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.981"
+        app:srcCompat="@drawable/trian" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
